--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "brace": "^0.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.5.1",
     "lottie-web": "^5.7.3",
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
