--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/pako": "^1.0.1",
+    "@vercel/analytics": "^1.6.1",
     "brace": "^0.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
